[workspace]
resolver = "2"
members = [
    "bank",
    "divide-corridor",
    "garbage-collection",
    "knight-dialer",
    "largest-3-same-digit",
    "largest-odd",
    "longest-1s-sub",
    "make-ints-zero",
    "number-1s",
    "sort-vowels",
    "tournament-matches",
    "words-formed-by-chars"
]
